--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^1.1.7+1
+  adobe_xd: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
