--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_maps_flutter: ^2.0.6
   http: ^0.13.1
   json_serializable: ^4.1.0
+  fl_chart: ^0.36.2
+  fluttertoast: ^8.0.6
 
 
 dev_dependencies:
