--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   json_serializable: ^4.1.0
   fl_chart: ^0.36.2
   fluttertoast: ^8.0.6
+  flutter_launcher_icons: ^0.9.0
+
+flutter_icons:
+  image_path_android: "assets/images/launcher_icon.png"
+  image_path_ios: "assets/images/launcher_icon.png"
+  android: true
+  ios: true
 
 
 dev_dependencies:
