--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   fl_chart: ^0.36.2
   fluttertoast: ^8.0.6
   flutter_launcher_icons: ^0.9.0
+  image_picker: ^0.8.1+3
+  shared_preferences: ^2.0.6
+  build_runner: ^2.0.6
+  retrofit: ^2.0.1
+  retrofit_generator: ^2.0.1
+  location: ^4.3.0
 
 flutter_icons:
   image_path_android: "assets/images/launcher_icon.png"
@@ -51,6 +57,8 @@ flutter_icons:
 
 
 dev_dependencies:
+  build_runner: ^2.0.6
+  json_serializable: ^4.1.0
   flutter_test:
     sdk: flutter
 
