--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   retrofit: ^2.0.1
   retrofit_generator: ^2.0.1
   location: ^4.3.0
+  floor: ^1.1.0
+  geocoder: ^0.2.1
+  auto_size_text: ^3.0.0-nullsafety.0
+  hive: ^2.0.4
+
 
 flutter_icons:
   image_path_android: "assets/images/launcher_icon.png"
@@ -59,6 +64,7 @@ flutter_icons:
 dev_dependencies:
   build_runner: ^2.0.6
   json_serializable: ^4.1.0
+  floor_generator: ^1.1.0
   flutter_test:
     sdk: flutter
 
